--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div class="container"></div>
     <div class="car"></div>
 
+    <div class="meme-container" class="card-container"></div>
+    <div class="data-container" class="card-container"></div>
+
     <script src="main.js"></script>
 </body>
 
